# DNA-kmer-analysis

./: .gitignore  Didactic_user_manual_kmer-analysis.md  README.md  kmer-analisys.py  kmer-analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/seq/: invalid_seq.fasta  yeast_MET_upstream.fasta
doc/: .gitignore  Didactic_user_manual_kmer-analysis.md  kmer-statistics.Rmd
kmerlib/: exp_freq.py  kmer_stats.py  nucleotide_frequencies.py  sequences.py
scripts/: kmer_analysis.py  markov_model.py
src/bioseq_kmers/: background_models.py  kmer_stats.py  sequences.py  utils.py
src/bioseq_kmers/cli/: kmer_analysis.py  markov_from_kmers.py  markov_from_seq.py  markov_model.py  seq_proba.py
tests/: kmer_analysis_test.py  test_background_models.py  test_kmer_stats.py  test_sequences.py  test_utils.py
