[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bioseq-kmer-analysis"
version = "0.2"
description = "Toolkit for the analysis of k-mer occurrences in biological sequences"
authors = [
    {name = "Anouk Risch"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "colorama"
]

[project.scripts]
kmer-analysis = "bioseq_kmers.cli.kmer_analysis:main"
markov-from-seq  = "bioseq_kmers.cli.markov_model:main"
markov-from-kmers = "bioseq_kmers.cli.markov_from_kmers:main"